Optimized search process

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "search-osm-geocode",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Public search geographical location or address using Open Street Map Geocoding API: [reverse] geocoding.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "underscore": "^1.6.0",
-    "request": "^2.36.0"
+    "request": "^2.40.0",
+    "underscore": "^1.6.0"
   },
   "keywords": [
     "search",
@@ -22,7 +22,7 @@
     "type": "git",
     "url": "git://github.com/kolegm/osm-geocoder.git"
   },
-  "author": { 
+  "author": {
     "name": "Oleg Kravchuk",
     "email": "kolegm.real@gmail.com"
   },
